@@ -2,12 +2,15 @@ package com.example.demo.security;
 
 import com.example.demo.entity.UserAccount;
 import com.example.demo.repository.UserAccountRepository;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.*;
 import org.springframework.stereotype.Service;
-import java.util.Collections;
+
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
+
     private final UserAccountRepository repo;
 
     public CustomUserDetailsService(UserAccountRepository repo) {
@@ -15,10 +18,8 @@ public class CustomUserDetailsService implements UserDetailsService {
     }
 
     @Override
-    public UserDetails loadUserByUsername(String email) throws UsernameNotFoundException {
-        UserAccount user = repo.findByEmail(email)
-                .orElseThrow(() -> new UsernameNotFoundException("User not found"));
-        return new org.springframework.security.core.userdetails.User(
-                user.getEmail(), user.getPassword(), Collections.emptyList());
+    public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
+        UserAccount ua = repo.findByEmail(username).orElseThrow(() -> new UsernameNotFoundException("User not found"));
+        return new User(ua.getEmail(), ua.getPassword(), List.of(new SimpleGrantedAuthority(ua.getRole())));
     }
 }
